[metadata]
name = semanticscience_model
url = https://github.com/vemonet/semanticscience-model
author = Michel Dumontier
author_email = micheldumontier@gmail.com
summary = A model for sciences
description = A model for sciences
long_description = A model for sciences
home_page = https://vemonet.github.io/semanticscience_model
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    semanticscience_model

data-files = semanticscience_model/model = semanticscience_model/model/*
    semanticscience_model/jsonld_context = semanticscience_model/jsonld_context/*
    semanticscience_model/json_schema = semanticscience_model/json_schema/*
    semanticscience_model/model = semanticscience_model/model/*
    semanticscience_model/owl = semanticscience_model/owl/*
    semanticscience_model/shex = semanticscience_model/shex/*
    semanticscience_model/graphql = semanticscience_model/graphql/*
    semanticscience_model/rdf = semanticscience_model/rdf/*


